assets/css/rotator.css
/*
 * Selectors are organized in groups of what they affect. Inside of the groups,
 *   selectors are ordered from specificity first and then alphabetically.
 *   Additionally, selectors within the groups are indented based on 
 *   relativity (ex. the fast-rotate class would only be applied to an element
 *   that already has the fa-square class).
 */


/* Selectors that generally apply to all aspects of Rotator */

body {
	background-color: #272727;
	margin: 0;
}

html, body, .row, .container {
	height: 100%;
	width: 100%;
}

.container {
	width: 100%;
	height: 100%;
}

.row {
	margin: 0;
}

/* Selectors that affect the style of the Rotator menus */

label {
	-webkit-transition: opacity 1.5s;
  -moz-transition: opacity 1.5s;
	-o-transition: opacity 1.5s;
	color: rgb( 230, 230, 230 );
	font-size: 2.2vw;
	opacity: 0.7;
	transition: opacity 0.15s;
}

.fa {
	-webkit-transition: color 0.15s;
  -moz-transition: color 0.15s;
  -o-transition: color 0.15s;
	color: steelblue;
  font-size: 15vw;
  transition: color 0.15s;
}

  	.fa:hover {
			color: forestgreen;
		}

		.fa-square {
			box-shadow: 0 0 1px rgba(0, 0, 0, 0.0);
			margin-bottom: 15px;
		}

				.fast-rotate {
	      	-webkit-animation: fa-spin 2s infinite linear;
  				animation: fa-spin 2s infinite linear;
			  }

				.medium-rotate {
        	-webkit-animation: fa-spin 5s infinite linear;
  				animation: fa-spin 5s infinite linear;
			  }

				.slow-rotate {
        	-webkit-animation: fa-spin 20s infinite linear;
  				animation: fa-spin 20s infinite linear;
			  }

.labeled-icon {
	align-items: center;
	display: flex;
	flex-direction: column;
}

.invis-spacer {
	visibility: hidden;
}

.menu, .mid-menu {
	align-items: center;
	display: flex;
	height: 100%;
	justify-content: space-around;
	min-width: 320px;
	width: 100%;
}

.mid-menu {
	width: 80%;
}

.side-menu {
	align-items: flex-start;
	display: flex;
	height: 100%;
	width: 10%;
}

/* Selectors that affect the style of a Rotator game */

h2 {
	font-size: 2.2vw;
	margin: 0 0 10px 0;
}

p {
	color: white;
	font-size: 30px;
	margin-bottom: 0;
	margin-top: 15px;
}

ul {
	width: 100%;
}

#gameStats li {
	-o-transition: font-size 0.15s; 
	-moz-transition: font-size 0.15s;
	-moz-user-select: none; 
	-ms-user-select: none; 
	-webkit-touch-callout: none;
	-webkit-transition: font-size 0.15s;
	-webkit-user-select: none;
  color: white;
  font-size: 1.3vw;
	margin-bottom: 0;
	transition: all 0.15s;
	user-select: none;
}

	.zero-opacity {
		opacity: 0;
	}

#leftSideDisplay input {
 	background-color: #272727;  
 	color: white;
 	height: 3em;
 	width: 100%;
}

.game-container {
	display: flex;
	align-items: flex-start;
}

.left-aligned {
	justify-content: flex-start;
}

.mid-display {
	margin: auto 0 auto 0;
	width: 66.67%;
}

.mid-display, .side-display {
	float: left;
}

.restore-width {
	width: 100%;
}

.restore-font-size {
	font-size: 2em;
}

.right-aligned {
	justify-content: flex-end;	
}

.right-side-display {
	display: flex;
	width: 100%;
}

.side-display {
	align-items: flex-start;
	display: flex;
	flex-wrap: wrap;
	height: 100%;
	width: 16.665%;
}

.square {
	background-color: steelblue;
	border-radius: 10%;
	float: left;
	margin: 1%;
	padding-bottom: 10%;
	width: 10%;
}

		.animated {
		  -moz-transition: transform 0.15s, background-color 0.15s;
		  -o-transition: transform 0.15s, background-color 0.15s;
		  -webkit-transition: transform 0.15s, background-color 0.15s;
			transition: transform 0.15s, background-color 0.15s;
		}

		.easy-left {
			margin-left: 27%;
		}
		
		.medium-left {
			margin-left: 21%;
		}

		.hard-left {
			margin-left: 15%;
		}

		.rotated {
			-moz-transform: rotate( 90deg );
			-ms-transform: rotate( 90deg );
			-o-transform: rotate( 90deg );
			-webkit-transform: rotate( 90deg );
			background-color: forestgreen;
			transform: rotate( 90deg );
		}

#gameStats {
	padding: 0;
	list-style: none;
}

#newGameIcon {
	margin-right: 10px;
}

#statsDisplay {
	-webkit-transition: width 0.15s;
  -moz-transition: width 0.15s;
  -o-transition: width 0.15s;
  align-items: flex-start;
  transition: width 0.15s;
  height: 86vh;
  width: 100%;
}

/* Selectors that affect the style of the menus and Rotator games alike */

.full-opacity {
	opacity: 1.0;
}

.top-icon {
	font-size: 3.5vmax;
	margin-top: 3vh;
}

.removed {
	display: none;
}

